[package]
name = "beelay-core"
authors = ["Alex Good <alex@memoryadnthought.me>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/automerge/beelay"
rust-version = "1.80.1"
version = "0.1.0-alpha.1"
description = "A new sync protocol for Automerge"

[dependencies]
blake3 = "1.5.4"
bs58 = { version = "0.5.1", features = ["check"] }
futures = "0.3.30"
num = { version = "0.4.3", features = ["num-bigint"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
bolero = { version = "0.11.1", features = ["arbitrary"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
